--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,23 +1,37 @@
+.footer {
+  padding-top: 164px;
+}
 .footer .copyright__text {
   font-size: 16px;
   line-height: 21px;
   color: #272727;
 }
+.footer p {
+  font-size: 18px;
+  line-height: 28px;
+}
 .footer__list .list__link {
-  color: #F2F2F2;
+  text-transform: capitalize;
+  color: #161616;
   line-height: 1;
 }
-.footer .footer-content {
-  padding-block: 106px 84px;
-  border-block: 2px solid #6E6E6E;
+.footer__list .list__link:hover, .footer__list .list__link:focus {
+  color: #21578A;
 }
-@media screen and (max-width: 992px) {
-  .footer .footer-content {
-    padding-block: 50px;
-  }
+.footer .copyright-wrapper {
+  border-top: 1px solid #E0E1DD;
+  margin-top: 60px;
 }
 .footer .copyright-section {
-  padding-block: 23px 41px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 @media screen and (max-width: 992px) {
   .footer .copyright-section {
@@ -35,16 +49,18 @@
     line-height: 80px;
   }
 }
-.footer .list--social svg {
-  fill: #161616;
-  width: 1rem;
-  height: 1rem;
+.footer .list--hover .list__link {
+  position: relative;
+  -webkit-transition: color 0.3s ease-out;
+  transition: color 0.3s ease-out;
 }
-.footer .list--social .list__item {
-  background: #F2F2F2;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
+.footer .list--hover .list__link:hover, .footer .list--hover .list__link:focus {
+  color: #21578A;
+}
+.footer .back-to-top {
+  width: 44px;
+  height: 44px;
+  background: #002F5F;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -54,32 +70,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
 }
-.footer .list--social .list__item:hover, .footer .list--social .list__item:focus {
-  background: #DAFF00;
-}
-.footer .list--hover .list__link {
-  position: relative;
-  -webkit-transition: padding-left 0.3s ease-out;
-  transition: padding-left 0.3s ease-out;
-}
-.footer .list--hover .list__link::before {
-  content: "";
-  position: absolute;
-  width: 22px;
-  height: 1px;
-  background: #DAFF00;
-  left: 0;
-  top: 56%;
-  opacity: 0;
-  -webkit-transition: opactiy 0.1s ease-out;
-  transition: opactiy 0.1s ease-out;
-}
-.footer .list--hover .list__link:hover, .footer .list--hover .list__link:focus {
-  padding-left: 30px;
-}
-.footer .list--hover .list__link:hover::before, .footer .list--hover .list__link:focus::before {
-  opacity: 1;
+.footer .back-to-top:hover svg path, .footer .back-to-top:focus svg path {
+  stroke: #E3B838;
 }/*# sourceMappingURL=footer.css.map */
