--- a/assets/scss/_btns.scss
+++ b/assets/scss/_btns.scss
@@ -1,35 +1,34 @@
 @import './variables';
 
 .btn__outline-accent {
-    border:2px solid $clr-accent;
-    color: $clr-white;
+    border:1px solid $clr-accent;
+    color: $clr-accent !important;
     background: transparent;
-    border-radius: 5px;
-    padding: 8px 30px;
+    border-radius: 8px;
+    padding: 4px 25px !important;
     font-weight: 500 !important;
     min-width: 188px;
     &:hover,
     &:focus {
-        background: $clr-accent !important;
-        color: $clr-black !important;
-        border:2px solid $clr-accent !important;
+        background: $clr-accent-light !important;
+        color: $clr-accent !important;
+        border:1px solid $clr-accent-light !important;
     }
 }
 
-.btn-arrow {
-    color: $clr-light;
-    display: flex;
-    align-items: center;
-    gap: 20px;
-
-    svg {
-        transition: transform .3s ease;
-    }
+.btn__outline-light {
+    border:1px solid $clr-white;
+    color: $clr-white;
+    background: transparent;
+    border-radius: 8px;
+    padding: 4px 25px;
+    font-weight: 500 !important;
+    min-width: 188px;
     &:hover,
     &:focus {
-        color: $clr-light;
-        svg {
-            transform: translateX(10px);
-        }
+        background: $clr-accent-light !important;
+        color: $clr-accent-dark !important;
+        border:1px solid $clr-accent-light !important;
     }
 }
+
