--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,9 @@
 $clr-white:#fff;
 $clr-black:#000;
 $clr-dark:#161616;
-$clr-accent:#DAFF00;
+$clr-accent:#21578A;
+$clr-accent-dark:#002F5F;
+$clr-accent-light:#B3C8E6;
 $clr-light:#F2F2F2;
 
 
