--- a/assets/scss/_btns.scss
+++ b/assets/scss/_btns.scss
@@ -14,11 +14,27 @@
         color: $clr-accent !important;
         border:1px solid $clr-accent-light !important;
     }
+}   
+
+.btn__outline-white {
+    border:1px solid $clr-white;
+    color: $clr-white;
+    background: transparent;
+    border-radius: 8px;
+    padding: 4px 25px;
+    font-weight: 500 !important;
+    min-width: 188px;
+    &:hover,
+    &:focus {
+        background: $clr-accent-light !important;
+        color: $clr-accent-dark !important;
+        border:1px solid $clr-accent-light !important;
+    }
 }
 
 .btn__outline-light {
-    border:1px solid $clr-white;
-    color: $clr-white;
+    border:1px solid $clr-accent-light;
+    color: $clr-accent-light;
     background: transparent;
     border-radius: 8px;
     padding: 4px 25px;
