--- a/assets/css/technology.css
+++ b/assets/css/technology.css
@@ -1,3 +1,1 @@
-.technology__content p {
-  max-width: 568px;
-}/*# sourceMappingURL=technology.css.map */
+/*# sourceMappingURL=technology.css.map */
