--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -230,3 +230,10 @@ ul {
         padding-left: 50px;
     }
 }
+
+.application {
+    padding-block:170px;
+&__content {
+    padding-left: 50px;
+}
+}
