--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -58,6 +58,49 @@
     padding: 0 15px;
   }
 }
+.header .nav-item.dropdown:not(.lang-item) {
+  position: initial;
+}
+.header .nav-item.dropdown:not(.lang-item) .nav-link:not(.lang-link) {
+  position: initial;
+}
+.header .nav-item .dropdown-menu {
+  left: 0;
+  right: 0;
+  border-radius: 0;
+  padding-block: 90px;
+  margin-top: 16px;
+  border: 0;
+}
+.header .nav-item .dropdown-menu p {
+  font-size: 19px;
+  line-height: 26px;
+  font-family: "Berthold-Akzidenz-Grotesk-Medium";
+}
+.header .nav-item .dropdown-item {
+  padding-left: 0;
+  margin-left: -4px;
+  font-size: 19px;
+  line-height: 22px;
+}
+.header .nav-item .dropdown-item::before {
+  content: "";
+  width: 15px;
+  height: 10px;
+  display: inline-block;
+  background: url(../images/chevron-right.svg) no-repeat center;
+  vertical-align: middle;
+  margin-right: 5px;
+}
+.header .nav-item .dropdown-item:hover, .header .nav-item .dropdown-item:focus {
+  background: none;
+}
+.header .lang-item .dropdown-menu {
+  min-width: initial;
+}
+.header .lang-item .dropdown-item::before {
+  display: none;
+}
 .header .nav-link {
   padding: 0 !important;
   position: relative;
@@ -74,7 +117,7 @@
 }
 .header .nav-link:not(.german-logo-link, .btn, .lang-link)::before {
   content: "";
-  position: absolute;
+  position: static;
   bottom: 0px;
   left: 0;
   right: 0;
@@ -85,13 +128,13 @@
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   opacity: 0;
-  -webkit-transform: translateY(2px);
-          transform: translateY(2px);
+  -webkit-transform: translateY(26px);
+          transform: translateY(26px);
 }
 .header .nav-link:hover::before {
   opacity: 1;
-  -webkit-transform: translateY(0px);
-          transform: translateY(0px);
+  -webkit-transform: translateY(24px);
+          transform: translateY(24px);
 }
 .header .nav-link:hover, .header .nav-link:focus {
   color: #21578A;
