--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -4,7 +4,7 @@
 }
 @media screen and (max-width: 992px) {
   .header {
-    padding-block: 25px;
+    padding-block: 10px;
   }
 }
 .header-logo {
@@ -12,7 +12,7 @@
 }
 @media screen and (max-width: 992px) {
   .header-logo {
-    display: none;
+    max-width: 160px;
   }
 }
 .header-logo--mobile {
@@ -55,7 +55,7 @@
 }
 @media screen and (max-width: 1800px) {
   .header .nav-item {
-    padding: 0 15px;
+    padding: 0 10px;
   }
 }
 .header .nav-item.dropdown:not(.lang-item) {
@@ -94,6 +94,7 @@
 }
 .header .nav-item .dropdown-item:hover, .header .nav-item .dropdown-item:focus {
   background: none;
+  color: #21578A;
 }
 .header .lang-item .dropdown-menu {
   min-width: initial;
@@ -109,9 +110,13 @@
   font-weight: 400;
   line-height: 22px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1800px) {
   .header .nav-link {
-    color: #000;
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 1400px) {
+  .header .nav-link {
     margin-bottom: 30px;
   }
 }
@@ -156,7 +161,7 @@
 .header .lang-link:hover, .header .lang-link:focus {
   color: #D52B21;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1400px) {
   .header .offcanvas-body {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -168,9 +173,9 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding-inline: 50px 35px;
   }
 }
@@ -203,7 +208,7 @@
   }
 }
 .header .offcanvas {
-  background: #272727;
+  background: #F2F2F2;
   width: 100%;
 }
 @media screen and (max-width: 1200px) {
@@ -212,7 +217,7 @@
   }
 }
 .header .offcanvas .btn-close {
-  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23DAFF00'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2321578A'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
   opacity: 1;
   padding: 2px;
   margin: 20px;
@@ -226,9 +231,8 @@
     height: 1.2rem;
   }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1400px) {
   .header .offcanvas-header {
-    padding-inline: 25px;
     padding-top: 30px;
   }
   .header .offcanvas-header .header-logo--mobile {
