--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -34,13 +34,12 @@ h1 {
     margin-bottom: 20px;
     font-family: 'Berthold-Akzidenz-Grotesk-Medium';
     @include mq(md){
-        font-size: 26px;
-        line-height: 32px;
-        margin-bottom: 25px;
-        max-width: 75%;
+        font-size: 35px;
+        line-height: 40px;
     }
     @include mq(sm){
-        max-width: 100%;
+        font-size: 30px;
+        line-height: 35px;
     }
 }
 
@@ -51,13 +50,12 @@ h2{
     margin-bottom: 20px;
     font-family: 'Berthold-Akzidenz-Grotesk-Medium';
     @include mq(md){
-        font-size: 26px;
-        line-height: 32px;
-        margin-bottom: 20px;
-        max-width: 50%;
+        font-size: 35px;
+        line-height: 40px;
     }
     @include mq(sm){
-        max-width: 100%;
+        font-size: 30px;
+        line-height: 35px;
     }
 }
 
@@ -69,6 +67,7 @@ h3{
         font-size: 20px;
         line-height: 35px;
     }
+   
 }
 
 
@@ -81,5 +80,9 @@ a,button {
 .section__title {
     font-size: 35px;
     line-height: 45px;
+    @include mq(md){
+        font-size: 22px;
+        line-height: 30px;
+    }
 }
 
