--- a/assets/scss/home/header/header.scss
+++ b/assets/scss/home/header/header.scss
@@ -5,13 +5,13 @@
     background: $clr-white;
     padding-block:3px;
         @include mq(lg) {
-          padding-block:25px;
+          padding-block:10px;
          }
         &-logo  {
             max-width: 235px;
             @include mq(lg) {
-               display: none;
-            }
+                max-width: 160px;
+               }
         }
         &-logo--mobile {
             display: none;
@@ -44,7 +44,7 @@
         .nav-item {
             padding: 0 22px;
             @include mq(xxxl){
-                padding: 0 15px;
+                padding: 0 10px;
               }
               &.dropdown:not(.lang-item) {
                 position: initial;
@@ -85,6 +85,7 @@
                 &:focus
                  {
                     background: none;
+                    color: $clr-accent;
                 }
               }
         }
@@ -105,8 +106,10 @@
             font-weight: 400;
             line-height: 22px;
 
-            @include mq(xl) {
-                color: $clr-black; 
+            @include mq(xxxl) {
+              font-size: 18px;
+            }
+            @include mq(xxl) {
                 margin-bottom: 30px;
             }
            
@@ -160,11 +163,11 @@
         }
        
         .offcanvas-body {
-            @include mq(xl) {
+            @include mq(xxl) {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                align-items: flex-start;
+                align-items: center;
                 padding-inline:50px 35px;
             }
             
@@ -199,13 +202,13 @@
 }
 
 .offcanvas {
-    background: $clr-dark;
+    background: $clr-light;
     width: 100%;
     @include mq(xl) {
         min-height: 100vh;
     }
     .btn-close {
-       background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23DAFF00'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
+       background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2321578A'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
        opacity: 1;
        padding: 2px;
        margin: 20px;
@@ -219,8 +222,8 @@
     }
 }
 .offcanvas-header {
-    @include mq(xl) {
-        padding-inline: 25px;
+    @include mq(xxl) {
+        // padding-inline: 25px;
         padding-top: 30px;
 
         .header-logo--mobile {
